@@ -157,7 +157,7 @@ Run 21915 was assigned status "run pending" on 2017-02-08 11:49:39 by joe_events
 
 
 NPG page for this run:
-http://sfweb.internal.sanger.ac.uk:9000/run/21915
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
 NPG, DNA Pipelines Informatics
 REPORT
@@ -174,7 +174,7 @@ Run 21915 was assigned status "run pending" on 2017-02-08 11:49:39 by joe_events
 
 $lims_summary
 NPG page for this run:
-http://sfweb.internal.sanger.ac.uk:9000/run/21915
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
 NPG, DNA Pipelines Informatics
 REPORT1
@@ -218,7 +218,7 @@ subtest 'instrument status event' => sub {
 Instrument HS8 status changed to "wash performed" on $date_as_string by joe_approver
 
 NPG page for this instrument:
-http://sfweb.internal.sanger.ac.uk:9000/instrument/HS8
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
 NPG, DNA Pipelines Informatics
 REPORT2
@@ -232,7 +232,7 @@ REPORT2
 Instrument HS8 status changed to "wash performed" on $date_as_string by joe_approver. Comment: my comment
 
 NPG page for this instrument:
-http://sfweb.internal.sanger.ac.uk:9000/instrument/HS8
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
 NPG, DNA Pipelines Informatics
 REPORT3
@@ -273,7 +273,7 @@ Run 21915 annotated by joe_loader on $date_as_string - New run annotation
 
 $lims_summary
 NPG page for this run:
-http://sfweb.internal.sanger.ac.uk:9000/run/21915
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
 NPG, DNA Pipelines Informatics
 REPORT4
@@ -326,7 +326,7 @@ Lane 2: Samples
 
 
 NPG page for this run:
-http://sfweb.internal.sanger.ac.uk:9000/run/21915
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
 NPG, DNA Pipelines Informatics
 REPORT5
@@ -363,7 +363,7 @@ subtest 'instrument annotation event' => sub {
 Instrument HS8 annotated by joe_loader on $date_as_string - New instrument annotation
 
 NPG page for this instrument:
-http://sfweb.internal.sanger.ac.uk:9000/instrument/HS8
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/instrument/HS8
 
 NPG, DNA Pipelines Informatics
 REPORT6
