@@ -39,7 +39,7 @@ Lane 7: Samples
 The manual QC review is complete and your data should now be available from iRODS (see http://scratchy.internal.sanger.ac.uk/wiki/index.php/IRODS_for_Sequencing_Users ). 
 
 NPG page for the run:
-http://sfweb.internal.sanger.ac.uk:9000/run/21915
+http://sfweb.internal.sanger.ac.uk:9000/perl/npg/run/21915
 
 Analysis and QC information for this run will be/is available:
 http://sfweb.internal.sanger.ac.uk:1959/illumina/runs/21915
